PracticaFinal/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones :
   3               | definiciones definicion

   4  definicion : definicionVariable
   5             | definicionEstructura
   6             | definicionFuncion

   7  definicionVariable : "VAR" "IDENT" ':' tipo ';'

   8  tipo : "IDENT"
   9       | '[' "LITENT" ']' tipo
  10       | tipoSimple

  11  tipoSimple : "INT"
  12             | "FLOAT"
  13             | "CHAR"

  14  definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura '}' ';'

  15  cuerpoEstructura :
  16                   | cuerpoEstructura cuerpo

  17  cuerpo : "IDENT" ':' tipo ';'

  18  definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariable sentencias '}'

  19  definicionesVariable :
  20                       | definicionesVariable definicionVariable

  21  parametros :
  22             | parametro

  23  parametro : param
  24            | parametro ',' param

  25  param : "IDENT" ':' tipoSimple

  26  retorno :
  27          | ':' tipoSimple

  28  sentencias :
  29             | sentencias sentencia

  30  sentencia : sentenciaAsignacion
  31            | sentenciaPrint
  32            | sentenciaRead
  33            | sentenciaWhile
  34            | sentenciaIf
  35            | sentenciaLlamadaFuncion
  36            | sentenciaReturn

  37  sentenciaAsignacion : expresion '=' expresion ';'

  38  sentenciaPrint : "PRINT" expresion ';'
  39                 | "PRINTSP" expresion ';'
  40                 | "PRINTLN" expresion ';'

  41  sentenciaRead : "READ" expresion ';'

  42  sentenciaWhile : "WHILE" '(' expresion ')' '{' sentencias '}'

  43  sentenciaIf : "IF" '(' expresion ')' '{' sentencias '}'
  44              | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'

  45  sentenciaLlamadaFuncion : "IDENT" '(' argumentos ')' ';'

  46  argumentos :
  47             | argumento

  48  argumento : expresion
  49            | argumento ',' expresion

  50  sentenciaReturn : "RETURN" return ';'

  51  return :
  52         | expresion

  53  expresion : "IDENT"
  54            | "LITENT"
  55            | "LITREAL"
  56            | "CHAR"
  57            | expresion '[' expresion ']'
  58            | expresion '+' expresion
  59            | expresion '-' expresion
  60            | expresion '*' expresion
  61            | expresion '/' expresion
  62            | '(' expresion ')'
  63            | expresion '<' expresion
  64            | expresion '>' expresion
  65            | expresion "MENORIGUAL" expresion
  66            | expresion "MAYORIGUAL" expresion
  67            | expresion "DISTINTO" expresion
  68            | expresion "IGUAL" expresion
  69            | expresion "AND" expresion
  70            | expresion "OR" expresion
  71            | '!' expresion
  72            | expresion '.' "IDENT"
  73            | "CAST" '<' tipoSimple '>' '(' expresion ')'
  74            | "IDENT" '(' argumentos ')'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	definicionVariable  goto 7
	definicionEstructura  goto 8
	definicionFuncion  goto 9


state 3
	definicionVariable : "VAR" . "IDENT" ':' tipo ';'  (7)

	"IDENT"  shift 10
	.  error


state 4
	definicionFuncion : "IDENT" . '(' parametros ')' retorno '{' definicionesVariable sentencias '}'  (18)

	'('  shift 11
	.  error


state 5
	definicionEstructura : "STRUCT" . "IDENT" '{' cuerpoEstructura '}' ';'  (14)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : definicionVariable .  (4)

	.  reduce 4


state 8
	definicion : definicionEstructura .  (5)

	.  reduce 5


state 9
	definicion : definicionFuncion .  (6)

	.  reduce 6


state 10
	definicionVariable : "VAR" "IDENT" . ':' tipo ';'  (7)

	':'  shift 13
	.  error


state 11
	definicionFuncion : "IDENT" '(' . parametros ')' retorno '{' definicionesVariable sentencias '}'  (18)
	parametros : .  (21)

	"IDENT"  shift 14
	')'  reduce 21

	parametros  goto 15
	parametro  goto 16
	param  goto 17


state 12
	definicionEstructura : "STRUCT" "IDENT" . '{' cuerpoEstructura '}' ';'  (14)

	'{'  shift 18
	.  error


state 13
	definicionVariable : "VAR" "IDENT" ':' . tipo ';'  (7)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 24
	tipoSimple  goto 25


state 14
	param : "IDENT" . ':' tipoSimple  (25)

	':'  shift 26
	.  error


state 15
	definicionFuncion : "IDENT" '(' parametros . ')' retorno '{' definicionesVariable sentencias '}'  (18)

	')'  shift 27
	.  error


state 16
	parametros : parametro .  (22)
	parametro : parametro . ',' param  (24)

	','  shift 28
	')'  reduce 22


state 17
	parametro : param .  (23)

	.  reduce 23


state 18
	definicionEstructura : "STRUCT" "IDENT" '{' . cuerpoEstructura '}' ';'  (14)
	cuerpoEstructura : .  (15)

	.  reduce 15

	cuerpoEstructura  goto 29


state 19
	tipo : '[' . "LITENT" ']' tipo  (9)

	"LITENT"  shift 30
	.  error


state 20
	tipo : "IDENT" .  (8)

	.  reduce 8


state 21
	tipoSimple : "INT" .  (11)

	.  reduce 11


state 22
	tipoSimple : "FLOAT" .  (12)

	.  reduce 12


state 23
	tipoSimple : "CHAR" .  (13)

	.  reduce 13


state 24
	definicionVariable : "VAR" "IDENT" ':' tipo . ';'  (7)

	';'  shift 31
	.  error


state 25
	tipo : tipoSimple .  (10)

	.  reduce 10


state 26
	param : "IDENT" ':' . tipoSimple  (25)

	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipoSimple  goto 32


state 27
	definicionFuncion : "IDENT" '(' parametros ')' . retorno '{' definicionesVariable sentencias '}'  (18)
	retorno : .  (26)

	':'  shift 33
	'{'  reduce 26

	retorno  goto 34


state 28
	parametro : parametro ',' . param  (24)

	"IDENT"  shift 14
	.  error

	param  goto 35


state 29
	definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura . '}' ';'  (14)
	cuerpoEstructura : cuerpoEstructura . cuerpo  (16)

	"IDENT"  shift 36
	'}'  shift 37
	.  error

	cuerpo  goto 38


state 30
	tipo : '[' "LITENT" . ']' tipo  (9)

	']'  shift 39
	.  error


state 31
	definicionVariable : "VAR" "IDENT" ':' tipo ';' .  (7)

	.  reduce 7


state 32
	param : "IDENT" ':' tipoSimple .  (25)

	.  reduce 25


state 33
	retorno : ':' . tipoSimple  (27)

	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipoSimple  goto 40


state 34
	definicionFuncion : "IDENT" '(' parametros ')' retorno . '{' definicionesVariable sentencias '}'  (18)

	'{'  shift 41
	.  error


state 35
	parametro : parametro ',' param .  (24)

	.  reduce 24


state 36
	cuerpo : "IDENT" . ':' tipo ';'  (17)

	':'  shift 42
	.  error


state 37
	definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura '}' . ';'  (14)

	';'  shift 43
	.  error


state 38
	cuerpoEstructura : cuerpoEstructura cuerpo .  (16)

	.  reduce 16


state 39
	tipo : '[' "LITENT" ']' . tipo  (9)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 44
	tipoSimple  goto 25


state 40
	retorno : ':' tipoSimple .  (27)

	.  reduce 27


state 41
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' . definicionesVariable sentencias '}'  (18)
	definicionesVariable : .  (19)

	.  reduce 19

	definicionesVariable  goto 45


state 42
	cuerpo : "IDENT" ':' . tipo ';'  (17)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 46
	tipoSimple  goto 25


state 43
	definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura '}' ';' .  (14)

	.  reduce 14


state 44
	tipo : '[' "LITENT" ']' tipo .  (9)

	.  reduce 9


state 45
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariable . sentencias '}'  (18)
	definicionesVariable : definicionesVariable . definicionVariable  (20)
	sentencias : .  (28)

	"VAR"  shift 3
	'!'  reduce 28
	'('  reduce 28
	"IDENT"  reduce 28
	"LITENT"  reduce 28
	"CHAR"  reduce 28
	'}'  reduce 28
	"PRINT"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"READ"  reduce 28
	"WHILE"  reduce 28
	"IF"  reduce 28
	"RETURN"  reduce 28
	"LITREAL"  reduce 28
	"CAST"  reduce 28

	definicionVariable  goto 47
	sentencias  goto 48


state 46
	cuerpo : "IDENT" ':' tipo . ';'  (17)

	';'  shift 49
	.  error


state 47
	definicionesVariable : definicionesVariable definicionVariable .  (20)

	.  reduce 20


state 48
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariable sentencias . '}'  (18)
	sentencias : sentencias . sentencia  (29)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 52
	"LITENT"  shift 53
	"CHAR"  shift 54
	'}'  shift 55
	"PRINT"  shift 56
	"PRINTSP"  shift 57
	"PRINTLN"  shift 58
	"READ"  shift 59
	"WHILE"  shift 60
	"IF"  shift 61
	"RETURN"  shift 62
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	sentencia  goto 65
	sentenciaAsignacion  goto 66
	sentenciaPrint  goto 67
	sentenciaRead  goto 68
	sentenciaWhile  goto 69
	sentenciaIf  goto 70
	sentenciaLlamadaFuncion  goto 71
	sentenciaReturn  goto 72
	expresion  goto 73


state 49
	cuerpo : "IDENT" ':' tipo ';' .  (17)

	.  reduce 17


state 50
	expresion : '!' . expresion  (71)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 75


state 51
	expresion : '(' . expresion ')'  (62)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 76


state 52
	sentenciaLlamadaFuncion : "IDENT" . '(' argumentos ')' ';'  (45)
	expresion : "IDENT" .  (53)
	expresion : "IDENT" . '(' argumentos ')'  (74)

	'('  shift 77
	"AND"  reduce 53
	"OR"  reduce 53
	'<'  reduce 53
	'>'  reduce 53
	"MAYORIGUAL"  reduce 53
	"MENORIGUAL"  reduce 53
	"DISTINTO"  reduce 53
	"IGUAL"  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	'*'  reduce 53
	'/'  reduce 53
	'['  reduce 53
	'.'  reduce 53
	'='  reduce 53


state 53
	expresion : "LITENT" .  (54)

	.  reduce 54


state 54
	expresion : "CHAR" .  (56)

	.  reduce 56


state 55
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariable sentencias '}' .  (18)

	.  reduce 18


state 56
	sentenciaPrint : "PRINT" . expresion ';'  (38)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 78


state 57
	sentenciaPrint : "PRINTSP" . expresion ';'  (39)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 79


state 58
	sentenciaPrint : "PRINTLN" . expresion ';'  (40)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 80


state 59
	sentenciaRead : "READ" . expresion ';'  (41)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 81


state 60
	sentenciaWhile : "WHILE" . '(' expresion ')' '{' sentencias '}'  (42)

	'('  shift 82
	.  error


state 61
	sentenciaIf : "IF" . '(' expresion ')' '{' sentencias '}'  (43)
	sentenciaIf : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (44)

	'('  shift 83
	.  error


state 62
	sentenciaReturn : "RETURN" . return ';'  (50)
	return : .  (51)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	';'  reduce 51

	expresion  goto 84
	return  goto 85


state 63
	expresion : "LITREAL" .  (55)

	.  reduce 55


state 64
	expresion : "CAST" . '<' tipoSimple '>' '(' expresion ')'  (73)

	'<'  shift 86
	.  error


state 65
	sentencias : sentencias sentencia .  (29)

	.  reduce 29


state 66
	sentencia : sentenciaAsignacion .  (30)

	.  reduce 30


state 67
	sentencia : sentenciaPrint .  (31)

	.  reduce 31


state 68
	sentencia : sentenciaRead .  (32)

	.  reduce 32


state 69
	sentencia : sentenciaWhile .  (33)

	.  reduce 33


state 70
	sentencia : sentenciaIf .  (34)

	.  reduce 34


state 71
	sentencia : sentenciaLlamadaFuncion .  (35)

	.  reduce 35


state 72
	sentencia : sentenciaReturn .  (36)

	.  reduce 36


state 73
	sentenciaAsignacion : expresion . '=' expresion ';'  (37)
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)

	"AND"  shift 87
	"OR"  shift 88
	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	'='  shift 101
	.  error


state 74
	expresion : "IDENT" .  (53)
	expresion : "IDENT" . '(' argumentos ')'  (74)

	'('  shift 102
	"AND"  reduce 53
	"OR"  reduce 53
	'<'  reduce 53
	'>'  reduce 53
	"MAYORIGUAL"  reduce 53
	"MENORIGUAL"  reduce 53
	"DISTINTO"  reduce 53
	"IGUAL"  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	'*'  reduce 53
	'/'  reduce 53
	')'  reduce 53
	'['  reduce 53
	']'  reduce 53
	'.'  reduce 53
	';'  reduce 53
	','  reduce 53
	'='  reduce 53


state 75
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : '!' expresion .  (71)
	expresion : expresion . '.' "IDENT"  (72)

	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	"AND"  reduce 71
	"OR"  reduce 71
	')'  reduce 71
	']'  reduce 71
	';'  reduce 71
	','  reduce 71
	'='  reduce 71


state 76
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : '(' expresion . ')'  (62)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)

	"AND"  shift 87
	"OR"  shift 88
	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	')'  shift 103
	'['  shift 99
	'.'  shift 100
	.  error


state 77
	sentenciaLlamadaFuncion : "IDENT" '(' . argumentos ')' ';'  (45)
	expresion : "IDENT" '(' . argumentos ')'  (74)
	argumentos : .  (46)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	')'  reduce 46

	expresion  goto 104
	argumentos  goto 105
	argumento  goto 106


state 78
	sentenciaPrint : "PRINT" expresion . ';'  (38)
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)

	"AND"  shift 87
	"OR"  shift 88
	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 107
	.  error


state 79
	sentenciaPrint : "PRINTSP" expresion . ';'  (39)
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)

	"AND"  shift 87
	"OR"  shift 88
	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 108
	.  error


state 80
	sentenciaPrint : "PRINTLN" expresion . ';'  (40)
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)

	"AND"  shift 87
	"OR"  shift 88
	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 109
	.  error


state 81
	sentenciaRead : "READ" expresion . ';'  (41)
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)

	"AND"  shift 87
	"OR"  shift 88
	'<'  shift 89
	'>'  shift 90
	"MAYORIGUAL"  shift 91
	"MENORIGUAL"  shift 92
	"DISTINTO"  shift 93
	"IGUAL"  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 110
	.  error


state 82
	sentenciaWhile : "WHILE" '(' . expresion ')' '{' sentencias '}'  (42)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 111


state 83
	sentenciaIf : "IF" '(' . expresion ')' '{' sentencias '}'  (43)
	sentenciaIf : "IF" '(' . expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (44)

	'!'  shift 50
	'('  shift 51
	"IDENT"  shift 74
	"LITENT"  shift 53
	"CHAR"  shift 54
	"LITREAL"  shift 63
	"CAST"  shift 64
	.  error

	expresion  goto 112


state 84
	return : expresion .  (52)
	expresion : expresion . '[' expresion ']'  (57)
	expresion : expresion . '+' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '*' expresion  (60)
	expresion : expresion . '/' expresion  (61)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . "MENORIGUAL" expresion  (65)
	expresion : expresion . "MAYORIGUAL" expresion  (66)
	expresion : expresion . "DISTINTO" expresion  (67)
	expresion : expresion . "IGUAL" expresion  (68)
	expresion : expresion . "AND" expresion  (69)
	expresion : expresion . "OR" expresion  (70)
	expresion : expresion . '.' "IDENT"  (72)
